// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ResourceTable Name Search 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 120px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="3"
        aria-rowcount="1"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: left;"
            >
              Name
              <button
                aria-label="sort swap"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
              <button
                aria-label="sort swap"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: right;"
            >
              Age
              <button
                aria-label="sort up"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots ResourceTable No Filter 1`] = `
<div>
  <div
    class="MuiBox-root MuiBox-root"
    style="display: inline-block !important; height: 250px;"
  >
    <div
      style="overflow: visible; height: 0px; width: 0px;"
    >
      <div
        aria-colcount="3"
        aria-rowcount="4"
        class="ReactVirtualized__Table makeStyles-table"
        role="grid"
      >
        <div
          class="ReactVirtualized__Table__headerRow makeStyles-flexContainer"
          role="row"
          style="height: 48px; overflow: hidden; padding-right: 0px; width: 0px;"
        >
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: left;"
            >
              Name
              <button
                aria-label="sort swap"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: left;"
            >
              Namespace
              <button
                aria-label="sort swap"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
          <div
            class="ReactVirtualized__Table__headerColumn"
            role="columnheader"
            style="flex: 0 1 50px;"
          >
            <div
              class="MuiTableCell-root MuiTableCell-head makeStyles-headerCell makeStyles-tableCell makeStyles-sortCell"
              role="cell"
              style="text-align: right;"
            >
              Age
              <button
                aria-label="sort up"
                class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall"
                tabindex="0"
                type="button"
              >
                <span
                  class="MuiIconButton-label"
                >
                  <span />
                </span>
                <span
                  class="MuiTouchRipple-root"
                />
              </button>
            </div>
          </div>
        </div>
        <div
          aria-label="grid"
          class="ReactVirtualized__Grid ReactVirtualized__Table__Grid"
          role="rowgroup"
          style="box-sizing: border-box; direction: inherit; height: -48px; position: relative; width: 0px; will-change: transform; overflow-x: hidden; overflow-y: auto;"
          tabindex="0"
        />
      </div>
    </div>
    <div
      class="resize-triggers"
    >
      <div
        class="expand-trigger"
      >
        <div
          style="width: 1px; height: 1px;"
        />
      </div>
      <div
        class="contract-trigger"
      />
    </div>
  </div>
</div>
`;
